[remove-info-text] Fix spacing problem and removing double BEM.

--- a/assets/pages/bundles-landing/bundlesLanding.scss
+++ b/assets/pages/bundles-landing/bundlesLanding.scss
@@ -133,7 +133,7 @@
     float: left;
   }
 
-  .bundles__bundle__info-text {
+  .bundle__info-text {
     @include gu-font(copy, 16);
     color: gu-colour(neutral-1);
   }
@@ -152,9 +152,9 @@
     }
   }
 
-	.bundles__bundle--digital {
-		background-color: #1db7d7;
-	}
+  .bundles__bundle--digital {
+      background-color: #1db7d7;
+  }
 
   .bundles__bundle--paper {
     background-color: #58a1ce;
